# expenses_analyzer

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  app.py  blog-post-draft.md  cashflow-transformation.md  fix_december_dates.py  main.css  main.py  pyproject.toml  requirements.txt  validate_data.py
.github/workflows/: tests.yml
.hypothesis/constants/: 1bdacd3eac53fbd0  278d3f27d0204ba3  2af36108af00047c  32432c87b3373e84  36372f50d3d1fe07  3b866d95775cfffc  548ec3b29bad5c88  59cbd9bf8ced0c08  61ac0a084a29eb82  7ec852f9c08c5f5a  (+11 more)
docs/: BUDGET_TYPES_PLAN.md  IMPORTING_DATA.md  PDF_EXPORT_PLAN.md  TODO.md  TRUELAYER_SETUP.md
examples/: bank_statement.csv  check_date_mismatches.py  credit_card.csv  fix_all_wrong_dates.py  paypal.csv  revolut.csv
expenses/: __init__.py  analysis.py  app.py  backup.py  config.py  data_handler.py  default_categories.json  default_category_types.json  gemini_utils.py  main.css  oauth_server.py  pdf_export.py  plaid_handler.py  plaid_oauth_server.py  tags.py  transaction_filter.py  truelayer_handler.py  validation.py
screens/: delete_screen.py
tests/: conftest.py  test_analysis.py  test_app.py  test_backup.py  test_backup.py.bak  test_backup_screen.py  test_bulk_edit_transaction_screen.py  test_categorize_screen.py  test_confirmation_screen.py  test_corruption_handling.py  test_data_handler.py  test_data_handler_extended.py  test_delete_screen.py  test_edit_single_transaction_screen.py  test_edit_transaction_screen.py  test_file_browser_screen.py  test_gemini_utils.py  test_import_screen.py  test_integration_workflows.py  test_main.py  test_oauth_server.py  test_pdf_export.py  test_plaid_handler.py  test_property_based.py  test_soft_delete.py  test_tag_exclusion_screen.py  test_tags.py  test_transaction_filter.py  test_transaction_screen.py  test_transaction_screen_extended.py  test_truelayer_handler.py  test_truelayer_screen.py  test_validation.py  test_widgets.py
tools/: find_duplicate_transactions.py  validate_data.py
(+26 files in other folders)
