[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expenses-analyzer"
version = "0.1.0"
authors = [
  { name = "Angelo 'pallotron' Failla", email = "pallotron@gmail.com" },
]
description = "A Textual TUI application for analyzing your personal expenses."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["pandas", "textual", "pyarrow", "google-generativeai"]

[project.scripts]
expenses-analyzer = "expenses.main:main"

[tool.setuptools]
packages = {find = {}}
include-package-data = true
